bug: Add left margin to caption on small sizes

--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,9 +1,21 @@
 .lead__caption {
-  margin: 8px 0 0 0;
+  margin: 8px 0 0 16px;
   padding: 0;
   font-weight: normal;
   font-size: 10px;
   line-height: 1.4;
   letter-spacing: 0.15em;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 768px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .lead__caption {
+    margin-left: 0;
+  }
 }
